# ytnotify

./: .env  .gitignore  Cargo.toml  docker-compose.yml
src/: main.rs
src/core/: mod.rs
src/core/bot/: mod.rs
src/core/notifier/: mod.rs
src/core/subscriber/: mod.rs
src/core/types/: channel.rs  mod.rs  telegram.rs
src/db/: mod.rs  schema.rs
src/db/dto/: profile.rs  yt_noti_sub.rs
src/db/model/: mod.rs  profile.rs  yt_noti_sub.rs
src/db/repo/: mod.rs  profile_repo.rs  yt_noti_sub_repo.rs
src/telegram_bot/: command_handler.rs  mod.rs
src/yt_api/: mod.rs
