[package]
name = "ytnotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
teloxide = { version = "0.11.3", features = ["macros"] }
regex = "1.7.0"
log = "0.4.0"
env_logger = "0.10.0"
dotenvy = "0.15"
failure = "0.1.8"
failure_derive = "0.1.8"
async-trait = "0.1.60"
anyhow = "1.0.68"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }